Replaced logo with dummy logo, added slogan, adjusted navigation

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,15 +1,5 @@
 <section id="content" class="container clearfix">
 
-    <section id="main">
-    
-        [MAIN_CONTENT_HERE]
-
-    </section><!-- end #main -->
-
-    <aside id="sidebar">
-    
-        [SIDEBAR_CONTENT_HERE]
-    
-    </aside><!-- end #sidebar -->
+	{{ content }}
         
 </section><!-- end #content -->
