--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,49 +9,10 @@
 		
 		<ul>
 			<li class="current">
-				<a href="index.html" data-description="All starts here">Home</a>
-				<ul>
-					<li><a href="logos-slider.html">Logos Slider</a></li>
-					<li><a href="photos-slider.html">Photos Slider</a></li>
-				</ul>
+				<a href="index.html" data-description="Accelerate here">Home</a>
 			</li>
 			<li>
-				<a href="elements.html" data-description="All the different stuff">Features</a>
-				<ul>
-					<li><a href="about-us.html">About Us</a></li>
-					<li><a href="our-team.html">Our Team</a>
-						<ul>
-							<li><a href="we-are-hiring.html">We are hiring</a></li>
-						</ul>
-					</li>
-					<li><a href="elements.html">Elements</a></li>
-					<li><a href="columns.html">Columns</a></li>
-					<li><a href="#">Third Level Item</a>
-						<ul>
-							<li><a href="#">This is a simple example</a></li>
-							<li><a href="#">Of the third level</a></li>
-							<li><a href="#">Navigation item</a></li> 
-						</ul>
-					</li>
-				</ul>
-			</li>
-			<li>
-				<a href="blog.html" data-description="What we think">Blog</a>
-				<ul>
-					<li><a href="single-post.html">Single Post</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="portfolio-4-columns.html" data-description="Work we are proud of">Portfolio</a>
-				<ul>
-					<li><a href="portfolio-2-columns.html">2 Columns</a></li>
-					<li><a href="portfolio-3-columns.html">3 Columns</a></li>
-					<li><a href="portfolio-4-columns.html">4 Columns</a></li>
-					<li><a href="single-project.html">Single Project</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="contact-us.html" data-description="Enquire here">Contact</a>
+				<a href="team.html" data-description="Who accelerates">Team</a>
 			</li>
 		</ul>
 
