--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
 	
 	<!--[if !lte IE 6]><!-->
 		<link rel="stylesheet" href="css/style.css" media="screen" />
+		<link rel="stylesheet" href="css/custom.css" media="screen" />
 
 		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,600,300,800,700,400italic|PT+Serif:400,400italic" />
 		
@@ -25,4 +26,12 @@
 	<!--[if lt IE 9]>
 		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
+	
+	<!-- Syntax Highlighter -->
+	<script type="text/javascript" src="plugins/syntaxhighlighter/scripts/shCore.js"></script>
+	<script type="text/javascript" src="plugins/syntaxhighlighter/scripts/shAutoloader.js"></script>
+	<script type="text/javascript" src="plugins/syntaxhighlighter/scripts/bootstrapp.js"></script>
+	<link href="plugins/syntaxhighlighter/styles/shCore.css" rel="stylesheet" type="text/css" media="all" />
+	<link type="text/css" rel="Stylesheet" href="plugins/syntaxhighlighter/styles/shThemeRDark.css" media="all" />
+	<!-- /Syntax Highlighter -->
 </head>
