Syntax highlighting works now with highlighter stuff not placed in head

--- a/_includes/additional.html
+++ b/_includes/additional.html
@@ -14,3 +14,11 @@
 	<script src="js/jquery.gmap.min.js"></script>
 	<script src="js/custom.js"></script>
 <!--<![endif]-->
+
+	<!-- Syntax Highlighter -->
+	<script type="text/javascript" src="plugins/syntaxhighlighter/scripts/shCore.js"></script>
+	<script type="text/javascript" src="plugins/syntaxhighlighter/scripts/shAutoloader.js"></script>
+	<script type="text/javascript" src="plugins/syntaxhighlighter/scripts/bootstrapp.js"></script>
+	<link href="plugins/syntaxhighlighter/styles/shCore.css" rel="stylesheet" type="text/css" media="all" />
+	<link type="text/css" rel="Stylesheet" href="plugins/syntaxhighlighter/styles/shThemeRDark.css" media="all" />
+	<!-- /Syntax Highlighter -->
