removed things from footer that are not relevant for us (just commented them out by now)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,17 +14,17 @@
 				
 			</nav><!-- end #footer-nav -->
 
-			<ul class="contact-info">
+			<!--<ul class="contact-info">
 				<li class="address">012 Some Street. New York, NY, 12345. USA</li>
 				<li class="phone">(123) 456-7890</li>
 				<li class="email"><a href="mailto:contact@companyname.com">contact@companyname.com</a></li>
-			</ul><!-- end .contact-info -->
+			</ul>--><!-- end .contact-info -->
 			
 		</div><!-- end .three-fourth -->
 
 		<div class="one-fourth last">
 
-			<span class="title">Stay connected</span>
+			<!--<span class="title">Stay connected</span>
 
 			<ul class="social-links">
 				<li class="twitter"><a href="#">Twitter</a></li>
@@ -33,7 +33,7 @@
 				<li class="vimeo"><a href="#">Vimeo</a></li>
 				<li class="youtube"><a href="#">YouTube</a></li>
 				<li class="skype"><a href="#">Skype</a></li>
-			</ul><!-- end .social-links -->
+			</ul>--><!-- end .social-links -->
 
 		</div><!-- end .one-fourth.last -->
 		
@@ -47,8 +47,8 @@
 
 		<ul>
 			<li>Appccelerate &copy; 2012</li>
-			<li><a href="#">Legal Notice</a></li>
-			<li><a href="#">Terms</a></li>
+			<!--<li><a href="#">Legal Notice</a></li>
+			<li><a href="#">Terms</a></li>-->
 		</ul>
 
 	</div><!-- end .container -->
