--- a/_includes/additional.html
+++ b/_includes/additional.html
@@ -12,6 +12,7 @@
 	<script src="js/mediaelement-and-player.min.js"></script>
 	<script src="//maps.google.com/maps/api/js?sensor=false"></script>
 	<script src="js/jquery.gmap.min.js"></script>
+	<script src="js/jquery.touchSwipe-1.2.5.min.js"></script>
 	<script src="js/custom.js"></script>
 <!--<![endif]-->
 
