--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,8 +23,7 @@
 		<link rel="stylesheet" href="//universal-ie6-css.googlecode.com/files/ie6.1.1.css" media="screen, projection">
 	<![endif]-->
 
-	<!--[if lt IE 9]>
-		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
+	<!-- HTML5 Shiv + detect touch events -->
+	<script src="js/modernizr.custom.js"></script>
 	
 </head>
