Reactivated legal notice, corrected address for donator

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,16 +24,11 @@
 
 		<div class="one-fourth last">
 
-			<!--<span class="title">Stay connected</span>
+			<span class="title">Stay connected</span>
 
 			<ul class="social-links">
-				<li class="twitter"><a href="#">Twitter</a></li>
-				<li class="facebook"><a href="#">Facebook</a></li>
-				<li class="digg"><a href="#">Digg</a></li>
-				<li class="vimeo"><a href="#">Vimeo</a></li>
-				<li class="youtube"><a href="#">YouTube</a></li>
-				<li class="skype"><a href="#">Skype</a></li>
-			</ul>--><!-- end .social-links -->
+				<li class="github"><a href="http://www.github.com/appccelerate">github</a></li>
+			</ul><!-- end .social-links -->
 
 		</div><!-- end .one-fourth.last -->
 		
@@ -47,8 +42,7 @@
 
 		<ul>
 			<li>Appccelerate &copy; 2012</li>
-			<!--<li><a href="#">Legal Notice</a></li>
-			<li><a href="#">Terms</a></li>-->
+			<li><a href="legalnotice.html">Legal Notice</a></li>
 		</ul>
 
 	</div><!-- end .container -->
