Provided download links on homepage. Home site is now beautified.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,11 +14,9 @@
 				
 			</nav><!-- end #footer-nav -->
 
-			<!--<ul class="contact-info">
-				<li class="address">012 Some Street. New York, NY, 12345. USA</li>
-				<li class="phone">(123) 456-7890</li>
-				<li class="email"><a href="mailto:contact@companyname.com">contact@companyname.com</a></li>
-			</ul>--><!-- end .contact-info -->
+			<ul class="contact-info">
+				<li style="background: url(../img/icon-post-format-audio.png) no-repeat 0 0;">Appccelerate is pronounced [&#716;&#230;pk&#712;sel&#601;re&#618;t].</li>
+			</ul><!-- end .contact-info -->
 			
 		</div><!-- end .three-fourth -->
 
