--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,4 +26,19 @@
 	<!-- HTML5 Shiv + detect touch events -->
 	<script src="js/modernizr.custom.js"></script>
 	
+	<!-- Google Tracking -->
+	<script type="text/javascript">
+
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-7359440-3']);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+
+	</script>
+	
 </head>
