--- a/_includes/additional.html
+++ b/_includes/additional.html
@@ -4,15 +4,15 @@
 	<!--[if lt IE 9]> <script src="js/selectivizr-and-extra-selectors.min.js"></script> <![endif]-->
 	<script src="js/respond.min.js"></script>
 	<script src="js/jquery.easing-1.3.min.js"></script>
-	<script src="js/jquery.fancybox-1.3.4.pack.js"></script>
+	<script src="js/jquery.fancybox.pack.js"></script>
 	<script src="js/jquery.smartStartSlider.min.js"></script>
 	<script src="js/jquery.jcarousel.min.js"></script>
 	<script src="js/jquery.cycle.all.min.js"></script>
 	<script src="js/jquery.isotope.min.js"></script>
-	<script src="js/mediaelement-and-player.min.js"></script>
+	<script src="js/audioplayerv1.min.js"></script>
 	<script src="//maps.google.com/maps/api/js?sensor=false"></script>
 	<script src="js/jquery.gmap.min.js"></script>
-	<script src="js/jquery.touchSwipe-1.2.5.min.js"></script>
+	<script src="js/jquery.touchSwipe.min.js"></script>
 	<script src="js/custom.js"></script>
 <!--<![endif]-->
 
