--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+
+<!--[if IE 7]>                  <html class="ie7 no-js" lang="en">     <![endif]-->
+<!--[if lte IE 8]>              <html class="ie8 no-js" lang="en">     <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--> <html class="not-ie no-js" lang="en">  <!--<![endif]-->
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -16,7 +21,9 @@
 		
 		<link rel="stylesheet" href="css/fancybox.min.css" media="screen" />
 
-		<link rel="stylesheet" href="css/mediaelementplayer.min.css" media="screen" />
+		<link rel="stylesheet" href="css/video-js.min.css" media="screen" />
+
+		<link rel="stylesheet" href="css/audioplayerv1.min.css" media="screen" />
 	<!--<![endif]-->
 
 	<!--[if lte IE 6]>
@@ -25,6 +32,10 @@
 
 	<!-- HTML5 Shiv + detect touch events -->
 	<script src="js/modernizr.custom.js"></script>
+
+	<!-- HTML5 video player -->
+	<script src="js/video.min.js"></script>
+	<script>_V_.options.flash.swf = 'http://localhost/smartstart/js/video-js.swf';</script>
 	
 	<!-- Google Tracking -->
 	<script type="text/javascript">
