--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,7 +39,7 @@
 	<div class="container">
 
 		<ul>
-			<li>Appccelerate &copy; 2012</li>
+			<li>Appccelerate &copy; 2008 - 2013</li>
 			<li><a href="legalnotice.html">Legal Notice</a></li>
 		</ul>
 
